--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
   </div>
 </div>
 
+<footer class="footer-secure">
+  <div class="footer-inner">
+    <p>© 2025 Desarrollado por Magdalena Inalaf · Proyecto Frontend Simulado</p>
+    <p>Interfaz clasificada para uso interno de S.H.I.E.L.D.</p>
+    <p>ID Autorizado: <span class="auth-code">MAGDA-X19-007</span></p>
+  </div>
+</footer>
 <script src="assets/js/script.js"></script>
 </body>
 </html>
